# discord-necronica-bot

./: .gitignore  Cargo.toml  Makefile.copy  README.md  alias.db  commands.go  config.json.copy  data.json  db  go.mod  go.sum  main.go  messages.go  pi-build.bat  pi-deploy.bat  pi-start.bat  pi-stop.bat  pi_build.py  pi_deploy.py
deploy/extra/: data.json
src/: main.rs
